--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,11 @@
 # CUSTOMIZE
 # Name of your site (displayed in the header)
 # This should be your name or nickname.
-name: Your Name
+name: Pasindu Weerasinghe
 
 # CUSTOMIZE
 # Short bio or description aout you (displayed in the header)
-description: CSCI-UA 480 Student, Spring 2023
+description: Junior majoring in CS | CSCI-UA 480 Student, Spring 2023
 
 # CUSTOMIZE
 # URL of your avatar or profile pic (the image should be located in the images 
@@ -32,12 +32,12 @@ excerpt_separator: <!--more-->
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: pasindu@nyu.edu
   facebook:
   flickr:
-  github: ossd-s23
+  github: Pasindu3683
   instagram:
-  linkedin:
+  linkedin: https://www.linkedin.com/in/pasindu-weerasinghe-2b3678159/
   pinterest:
   twitter:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
@@ -50,14 +50,14 @@ footer-links:
 # It should be "/USER_NAME-weekly" in which USER_NAME is replaced by your actual
 # user name for GitHub.
 
-url: "https://ossd-s23.github.io/weekly"
+url: "https://ossd-s23.github.io/Pasindu3683-weekly/"
 
 # CUSTOMIZE
 # Replace this with the name of your own repository.
 # It should be "/USER_NAME-weekly" in which USER_NAME is replaced by your actual
 # user name for GitHub.
 
-baseurl: "/weekly"
+baseurl: "/Pasindu3683-weekly"
 
 #
 # !! You don't need to change any of the configuration flags below !!
